Setting up workspace
Adding some rusty code to set up the homepage/navbar - will fix ASAP

--- a/index.html
+++ b/index.html
@@ -15,5 +15,46 @@
 </head>
 
 <body>
-    <P1>Save the idk</P1>
+    <div class="container">
+        <div class="jumbotron col-xs-12 col-sm-12 col-md-12">
+            <h1>Title</h1>
+            <p>Description</p>
+        </div>
+    </div>
+    <div class="row three-box">
+        <div class="box about col-xs-12 col-sm-4 col-md-4">
+            <h3>Header</h3>
+            <p>Description</p>
+            <img src="https://www.thesprucepets.com/thmb/sfuyyLvyUx636_Oq3Fw5_mt-PIc=/3760x2820/smart/filters:no_upscale()/adorable-white-pomeranian-puppy-spitz-921029690-5c8be25d46e0fb000172effe.jpg">
+        </div>
+        <div class="box goal col-xs-12 col-sm-4 col-md-4">
+            <h3>Header</h3>
+            <p>Description</p>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg">
+        </div>
+        <div class="box defeat col-xs-12 col-sm-4 col-md-4">
+            <h3>Header</h3>
+            <p>Description</p>
+            <img src="https://cdn.pixabay.com/photo/2019/08/19/07/45/dog-4415649__340.jpg">
+        </div>
+    </div>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <a class="nav-item nav-link active" href="#">Home</a>
+            <a class="nav-item nav-link active" href="donate.html">Donate</a>
+            <a class="nav-item nav-link active" href="#">About</a>
+        </div>
+      </nav>
+    <div class="footer text-center">
+        <div class="button text-center col-xs-12 col-sm-8 col-md-10">
+            <div class="input-group">
+                <p>About Us</p>
+            </div>
+        </div>
+        <a class="bot-btn btn btn-default" href="https://google.com" role="button">Link</a>
+        <a class="bot-btn btn btn-default" href="http://google.com" role="button">Link</a>
+    </div>
+
 </body>
+
+</html>
