--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
 </ul>
 <p style="font-size: 1.5em;"><strong>&nbsp; WHICH TYPE OF DONATION YOU WANT?</strong></p>
 <ol>
-	<li style="font-size: 1.4em;">If you want to hold an agency by yourself, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly.</li>
+	<li style="font-size: 1.4em;">If you want to create your own charity, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly.</li>
 	<li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our charity page, please call the agency beforehand to ensure they can accept your donation.</li>
 </ol>
 </body>
