added a table, still need to make page prettier

--- a/donate.html
+++ b/donate.html
@@ -4,17 +4,46 @@
 <body>
 <h1 style="text-align: center;">Thank You For Helping Us Relieve Hunger!</h1>
 <p style="font-size: 1.5em; text-align: center;"><em>Whether you are a grocer, farmer or individule, you can help drive hunger from our communities today and end hunger for good.</em></p>
+<p>&nbsp;</p>
 <hr />
 <p style="font-size: 1.5em;"><span style="color: #ff0000;">&nbsp;<strong> WE CANNOT ACCEPT</strong></span></p>
 <ul>
-	<li style="font-size: 1.5em;"><span style="color: #ff0000;">Food with signs of mold, fungus, insects or decay</span></li>
-	<li style="font-size: 1.5em;"><span style="color: #ff0000;">Damaged, compromised or bloated packaging</span></li>
-	<li style="font-size: 1.5em;"><span style="color: #ff0000;">Pallets or boxes with chemicals/cleaning supplies mixed with food product</span></li>
+<ul>
+<li style="font-size: 1.5em;"><span style="color: #ff0000;">Food with signs of mold, fungus, insects or decay</span></li>
+<li style="font-size: 1.5em;"><span style="color: #ff0000;">Damaged, compromised or bloated packaging</span></li>
+<li style="font-size: 1.5em;"><span style="color: #ff0000;">Pallets or boxes with chemicals/cleaning supplies mixed with food product</span></li>
 </ul>
+</ul>
+<p>&nbsp;</p>
 <p style="font-size: 1.5em;"><strong>&nbsp; WHICH TYPE OF DONATION YOU WANT?</strong></p>
 <ol>
-	<li style="font-size: 1.4em;">If you want to hold an agency by yourself, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly.</li>
-	<li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our charity page, please call the agency beforehand to ensure they can accept your donation.</li>
+<li style="font-size: 1.4em;">If you want to create your own charity, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly. <br /><br />
+<table style="border-collapse: collapse; width: 98.6092%; height: 56px;" border="1.5">
+<tbody>
+<tr style="height: 10px;">
+<td style="width: 14.0263%; height: 10px;">Name</td>
+<td style="width: 16.6537%; height: 10px;">&nbsp;</td>
+<td style="width: 24.5364%; height: 10px;">Contact Information</td>
+<td style="width: 41.597%; height: 10px;">&nbsp;</td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 14.0263%; height: 18px;">Time</td>
+<td style="width: 16.6537%; height: 18px;">&nbsp;</td>
+<td style="width: 24.5364%; height: 18px;">Location</td>
+<td style="width: 41.597%; height: 18px;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
+<table style="border-collapse: collapse; width: 98.6096%; height: 86px;" border="1">
+<tbody>
+<tr style="height: 86px;">
+<td style="width: 17.995%; height: 86px;">Food Description</td>
+<td style="width: 80.6661%; height: 86px;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
+</li>
+<li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our charity page, please call the agency beforehand to ensure they can accept your donation.</li>
 </ol>
 </body>
 </html> 
