--- a/charity.html
+++ b/charity.html
@@ -2,11 +2,13 @@
 <head>
 <title>Charity</title>
 <body>
-<h1 style="text-align: center;">Charities</h1>
+<h1 style="text-align: center;">Charities</h1>  <!-- Centers the header charity -->
 <p style="font-size: 1.5em; text-align: center;"><em>All it takes is a click of a button and a kind heart.</em></p>
-<hr>
+<hr> <!-- inserts a head ruler to separate sections-->
+<!-- Description before the table -->
 <p style ="font-size: 1.5em;"><em> Before proceeding to donate, please refer to our donate page for details on what can and cannot be donated to local agencies. There you will also find a form you can fill out to create your own charity for this cause. Below is a list of charities accepting donations at this time and a brief description of each.</em></p>
 
+<!-- Code to create a bordered table with 2 columns and 6 row displaying charity information-->
 <style>
     table, th, td {
       border: 1px solid black;
@@ -37,8 +39,10 @@
         <td><a href="https://thp.org/">The Hunger Project</a></td>
         <td>The Hunger Project is a charity to make an impact across Africa, South Asia, and Latin America in regards to alleviating their hunger issues.</td>
     </tr>
-  </table>
-<p>&nbsp;</p>
+  </table> <!--end of charity table-->
+<p>&nbsp;</p> <!--added for aesthetic purposes-->
+
+<!--Code used for centering images and displaying gifs-->
 <style>
     img {
       display: block;
@@ -47,5 +51,5 @@
     }
 </style>
   <img src="https://s.wsj.net/public/resources/images/ON-CY045_201904_NS_20190328161523.gif" alt="Donate Now" style = width:50%>
-</body>
-</html> 
+</body> <!--end body-->
+</html> <!--end html code-->
