--- a/charity.html
+++ b/charity.html
@@ -6,7 +6,9 @@
 <p style="font-size: 1.5em; text-align: center;"><em>All it takes is a click of a button and a kind heart.</em></p>
 <hr> <!-- inserts a head ruler to separate sections-->
 <!-- Description before the table -->
-<p style ="font-size: 1.5em;"><em> Before proceeding to donate, please refer to our donate page for details on what can and cannot be donated to local agencies. There you will also find a form you can fill out to create your own charity for this cause. Below is a list of charities accepting donations at this time and a brief description of each.</em></p>
+<p style ="font-size: 1.5em;"><em> Before proceeding to donate, please refer to our donate page for details on what can and cannot be donated to local agencies. 
+    There you will also find a form you can fill out to create your own charity for this cause. 
+    Below is a list of charities accepting donations at this time and a brief description of each.</em></p>
 
 <!-- Code to create a bordered table with 2 columns and 6 row displaying charity information-->
 <style>
