linked to charity page

--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
 </table>
  <br>
 </li>
-<li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our charity page, please call the agency beforehand to ensure they can accept your donation.</li>
+<li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our <a href="charity.html">charity page</a>, please call the agency beforehand to ensure they can accept your donation.</li>
 </ol>
 </body>
 </html> 
