--- a/donate.html
+++ b/donate.html
@@ -1,9 +1,20 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Donate</title>
+</head>
+<style>
+  body {
+  background-image: url("https://i.pinimg.com/originals/35/6f/1b/356f1b88f1c734cf8ee5bd3a3f56a3d1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+}
+</style>
 <body>
-<h1 style="text-align: center;">Thank You For Helping Us Relieve Hunger!</h1>
-<p style="font-size: 1.5em; text-align: center;"><em>Whether you are a grocer, farmer or individule, you can help drive hunger from our communities today and end hunger for good.</em></p>
+<h1 style="font-size: 50px; text-align: center;">Thank You For Helping Us Relieve Hunger!</h1>
+<p style="font-size: 36px; text-align: center;"><em>Whether you are a grocer, farmer or individule, you can help drive hunger from our communities today and end hunger for good.</em></p>
 <p>&nbsp;</p>
 <hr />
 <p style="font-size: 1.5em;"><span style="color: #ff0000;">&nbsp;<strong> WE CANNOT ACCEPT</strong></span></p>
@@ -18,33 +29,26 @@
 <p style="font-size: 1.5em;"><strong>&nbsp; WHICH TYPE OF DONATION YOU WANT?</strong></p>
 <ol>
 <li style="font-size: 1.4em;">If you want to create your own charity, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly. <br /><br />
-<table style="border-collapse: collapse; width: 98.6092%; height: 56px;" border="1.5">
-<tbody>
-<tr style="height: 10px;">
-<td style="width: 14.0263%; height: 10px;">Name</td>
-<td style="width: 16.6537%; height: 10px;">&nbsp;</td>
-<td style="width: 24.5364%; height: 10px;">Contact Information</td>
-<td style="width: 41.597%; height: 10px;">&nbsp;</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 14.0263%; height: 18px;">Time</td>
-<td style="width: 16.6537%; height: 18px;">&nbsp;</td>
-<td style="width: 24.5364%; height: 18px;">Location</td>
-<td style="width: 41.597%; height: 18px;">&nbsp;</td>
-</tr>
-</tbody>
-</table>
-<table style="border-collapse: collapse; width: 98.6096%; height: 86px;" border="1">
-<tbody>
-<tr style="height: 86px;">
-<td style="width: 17.995%; height: 86px;">Food Description</td>
-<td style="width: 80.6661%; height: 86px;">&nbsp;</td>
-</tr>
-</tbody>
-</table>
+<form action="" method="post">
+  <label for="fname">Name:</label><br>
+  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="contact">Contact Information:</label><br>
+  <input type="text" id="contact" name="contact" value="(email or phone number)"><br>
+  <label for="time">Time:</label><br>
+  <input type="text" id="time" name="time" value="(00:00 - 23:59)"><br>
+  <label for="location">Location:</label><br>
+  <input type="text" id="location" name="location" value=""><br>
+  <label for="food">Food Description:</label><br>
+  <input type="text" size = "80" id="food" name="food" value=""><br>
+  <input type="submit" value="Submit">
+</form> 
+ <br>
+ <p style="font-size: 16px;">"Once you click the "Submit" button, our website will review your eligibility, and contact you through the "Contact Information" you left. Thank you for your participation."</p>
  <br>
 </li>
 <li style="font-size: 1.5em;">If you want to donate to a local agency near you, you can see our <a href="charity.html">charity page</a>, please call the agency beforehand to ensure they can accept your donation.</li>
 </ol>
+
+
 </body>
-</html> 
+</html>
