--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
 <title>Donate</title>
 </head>
-<style>
+<style> <!--add backgound picture-->
   body {
   background-image: url("https://i.pinimg.com/originals/35/6f/1b/356f1b88f1c734cf8ee5bd3a3f56a3d1.jpg");
   background-repeat: no-repeat;
@@ -29,7 +29,8 @@
 <p style="font-size: 1.5em;"><strong>&nbsp; WHICH TYPE OF DONATION YOU WANT?</strong></p>
 <ol>
 <li style="font-size: 1.4em;">If you want to create your own charity, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly. <br /><br />
-<form action="" method="post">
+<!--insert a form  for user to add information-->
+ <form action="" method="post">
   <label for="fname">Name:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="contact">Contact Information:</label><br>
@@ -50,5 +51,5 @@
 </ol>
 
 
-</body>
-</html>
+</body> 
+</html>  <!--end html code-->
