--- a/donate.html
+++ b/donate.html
@@ -17,6 +17,7 @@
 <p style="font-size: 36px; text-align: center;"><em>Whether you are a grocer, farmer or individule, you can help drive hunger from our communities today and end hunger for good.</em></p>
 <p>&nbsp;</p>
 <hr />
+ <!--warning for donor-->
 <p style="font-size: 1.5em;"><span style="color: #ff0000;">&nbsp;<strong> WE CANNOT ACCEPT</strong></span></p>
 <ul>
 <ul>
@@ -29,7 +30,8 @@
 <p style="font-size: 1.5em;"><strong>&nbsp; WHICH TYPE OF DONATION YOU WANT?</strong></p>
 <ol>
 <li style="font-size: 1.4em;">If you want to create your own charity, please fill out this form, write down a detailed location, time you available, food description as detailed as possilble(e.g. type, quantity, expiration day if any) for people who need food can reach out to you directly. <br /><br />
-<!--insert a form  for user to add information-->
+
+ <!--insert a form  for user to add information-->
  <form action="" method="post">
   <label for="fname">Name:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
