--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
 <title>Donate</title>
 </head>
-<style> <!--add backgound picture-->
+<style> 
   body {
   background-image: url("https://i.pinimg.com/originals/35/6f/1b/356f1b88f1c734cf8ee5bd3a3f56a3d1.jpg");
   background-repeat: no-repeat;
