--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,7 @@
 
 <style>
   body {
-    background-image: url("https://i.pinimg.com/originals/35/6f/1b/356f1b88f1c734cf8ee5bd3a3f56a3d1.jpg");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1n8-DBd8bsiXPPTk9jbvv8LzWGdvQ9ZYv5Q&usqp=CAU");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
